--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1858,6 +1858,7 @@ a {
     .core-qualities li{
       text-decoration: none;
       list-style: none;
+      color: #ffffff;
     }
 
     .qualities p{
