--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1325,7 +1325,112 @@ a {
 
 
 
+/* Blog Posts */
+/* 
 
+.container-blog {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1000px;
+  margin-block: 2rem;
+  gap: 2rem;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: clamp(20rem, calc(20rem + 2vw), 22rem);
+  overflow: hidden;
+  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 1em;
+  background: #ECE9E6;
+background: linear-gradient(to right, #FFFFFF, #ECE9E6);
+
+}
+
+
+
+.card__body {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+ 
+}
+
+
+.tag {
+  align-self: flex-start;
+  padding: .25em .75em;
+  border-radius: 1em;
+  font-size: .75rem;
+}
+
+.tag + .tag {
+  margin-left: .5em;
+}
+
+.tag-blue {
+  background: #56CCF2;
+background: linear-gradient(to bottom, #2F80ED, #56CCF2);
+  color: #fafafa;
+}
+
+.tag-brown {
+  background: #D1913C;
+background: linear-gradient(to bottom, #FFD194, #D1913C);
+  color: #fafafa;
+}
+
+.tag-red {
+  background: #cb2d3e;
+background: linear-gradient(to bottom, #ef473a, #cb2d3e);
+  color: #fafafa;
+}
+
+.card__body h4 {
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  color: #000;
+}
+
+.card__body p{
+  color: #000;
+}
+
+.card__footer {
+  display: flex;
+  padding: 1rem;
+  margin-top: auto;
+}
+
+.user {
+  display: flex;
+  gap: .5rem;
+  
+}
+
+.user__image {
+  width: 60px;
+  border-radius: 50%;
+}
+
+.user__info h5{
+  color: #000;
+}
+
+.user__info > small {
+  color: #666;
+}
+
+ */
 
 
 
@@ -2795,7 +2900,8 @@ a {
       }
 
       #vid{
-        display: none;
+        display: block;
+        margin-top: 56px;
       }
       
       
@@ -2836,6 +2942,10 @@ a {
 
       .qualities p{
         font-size: 13px; 
+      }
+
+      .qualities h3{
+        font-size: 25px;
       }
 
       .lead{
@@ -2986,7 +3096,13 @@ a {
 
 
 
-
+    .core-qualities li{
+      text-decoration: none;
+      list-style: none;
+      color: #ffffff;
+      font-size: 14px;
+      padding-top: 4px;
+    }
 
 
 
